Include auto vertical scrollbar in intrinsicScrollbarLogicalWidth.

Prior to this change, auto vertical scrollbars could intrude into the
content box and overlap content on the right edge.  Discussion of
this change at:

https://codereview.chromium.org/1930183002/#msg12

BUG=600036
R=skobes@chromium.org,eae@chromium.org

Review-Url: https://codereview.chromium.org/1980103002
Cr-Commit-Position: refs/heads/master@{#397112}

Former-commit-id: c9b3e99e2a71f7bcc4d9652916347782ff616e0d